--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- this is where react renders into -->
   <div id="root"></div>
 
-  <script src="build/bundle.js"></script>
+  <script src="bundle.js"></script>
 </body>
 
 </html>
